# prefvlm

./: .gitignore  config.yaml  pyproject.toml
.claude/: settings.local.json
notebooks/: longnap_typed_memory (1).ipynb  qwen_inference.ipynb
prefvlm/: __init__.py  cache.py  config.py  logging_setup.py  openai_client.py  run_mvp.py
prefvlm/data/: chartqa.py  scienceqa.py
prefvlm/eval/: aggregate.py
prefvlm/judge/: score.py
prefvlm/personas/: generate.py  schema.py
prefvlm/preferences/: instantiate.py  rubrics.py
prefvlm/prompts/: baseline_user.txt  judge_scoring.txt  oracle_system.txt  oracle_user.txt  persona_generation.txt  preference_dimension_sampling.txt  preference_instantiation.txt  rubric_expertise.txt  rubric_personal.txt
prefvlm/runners/: frontier.py  qwen_batch.py
prefvlm/scenarios/: assign.py
scripts/: diversity_checks.py
